--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&display=swap');
 
 body {
-    background-color: #1b1b1b;
+    background-color: #fc47ff;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -182,4 +182,5 @@ nav h1 {
     .featured .play-button i {
     font-size: 5vw;
     text-shadow: 0 0 100px #2c7ffc;
+
     }
